<resources>
    <string name="app_name" translatable="false">Marvel</string>

    <string name="default_channel_id" translatable="false">channel1</string>
    <!--General-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="ok" translatable="false">Ok</string>

    <!--Bottom Navigation Tabs-->
    <string name="marvelTab" translatable="false">Marvel</string>
    <string name="profileTab">Profile</string>

    <!--//Log In-->
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="incorrect_user">Incorrect email or password</string>
    <string name="wrong_info">Missing fields</string>
    <string name="invalid_info">Invalid information</string>

    <!--Shared preferences file-->
    <string name="preference_file_key" translatable="false">com.example.apirequest.PREFERENCE_FILE_KEY</string>
    <string name="preference_key_user" translatable="false">com.example.apirequest.USER</string>
    <string name="preference_name_user" translatable="false">com.example.apirequest.USER_NAME</string>
    <string name="preference_lastname_user" translatable="false">com.example.apirequest.USER_LASTNAME</string>

    <!--//Register-->
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="confirm_password">Confirm password</string>

    <!--//Reset password-->
    <string name="reset_password">Reset Password</string>

    <!--//User-->
    <string name="welcome">Welcome</string>

    <!--//Profile-->
    <string name="take_photo">Take Photo</string>
    <string name="select_photo">Select Photo</string>
    <string name="log_out">Log out</string>
    <string name="save_profile">Save</string>

    <!--//Errors-->
    <string name="error_email">Incorrect email</string>
    <string name="error_pass_match">Passwords don\'t match</string>

    <!--Information-->
    <string name="reset_password_message">Email sent</string>
    <string name="reset_password_tittle">Sent</string>

    <!--Accept-->
    <string name="accept">Accept</string>


    <!--Others-->
    <string name="search">Search</string>
    <string name="limit">Limit</string>
    <string name="invalid_limit">Invalid Limit</string>

    <!--Character Information-->
    <string name="comics" translatable="false">Comics</string>
    <string name="events">Events</string>
    <string name="series" translatable="false">Series</string>
    <string name="stories">Stories</string>
    <string name="no_description">No description available</string>
    <string name="series_image_description">Series Thumbnail</string>



    <plurals name="comments">
        <item quantity="one">Comment %d</item>
        <item quantity="other">Comments %d</item>
    </plurals>


    <!--PROFILE IMAGE VIEW-->
    <string name="action_settings">Settings</string>
    <string name="profile_desc">Rowan Sebastian Atkinson CBE is an English actor,  comedian and screenwriter</string>
    <string name="profile_title">Mr Bean</string>
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>

    <!-- font families -->
    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_black">sans-serif-black</string>
    <string name="font_family_thin">sans-serif-thin</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>

</resources>
